--- a/src/components/drop-down-bed/drop-down-bed.pug
+++ b/src/components/drop-down-bed/drop-down-bed.pug
@@ -15,9 +15,9 @@ mixin drop-down-bed(options = {})
   section.drop-down-bed.js-drop-down-bed
     div.drop-down-bed__titles
       div.drop-down-bed__title=title
-      div.drop-down-bed__subTitle=subTitle
+      div.drop-down-bed__sub-title=subTitle
     div.drop-down-bed__header
-      button.drop-down-bed__titleBtn.js-drop-down-bed__titleBtn Сколько комнат
+      button.drop-down-bed__title-btn.js-drop-down-bed__title-btn Сколько комнат
     div(class='drop-down-bed__body js-drop-down-bed__body ' + classOpen)
       -for(let {text,count} of list)
         div.drop-down-bed__bodyItem
