--- a/src/components/drop-down/drop-down.pug
+++ b/src/components/drop-down/drop-down.pug
@@ -14,7 +14,7 @@ mixin drop-down(options={})
   section.drop-down.js-drop-down
     div.drop-down__title=title 
     div.drop-down__header
-      button.drop-down__titleBtn.js-drop-down__titleBtn Сколько гостей
+      button.drop-down__title-btn.js-drop-down__title-btn Сколько гостей
     div(class='drop-down__body  js-drop-down__body ' + classOpen)
       -for(let item of list )
         div.drop-down__bodyItem
