--- a/src/components/buttons/buttons.scss
+++ b/src/components/buttons/buttons.scss
@@ -35,6 +35,7 @@
       background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
       color: #ffffff;
       padding: 0px 20px;
+
       &:focus,
       &:hover,
       &:active {
@@ -44,7 +45,7 @@
     }
 
     &_form {
-      background: url('./img/arrow_forward.svg')no-repeat 95.8% 50%, linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+      background: url("./img/arrow_forward.svg") no-repeat 95.8% 50%, linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
       text-transform: uppercase;
       color: #fff;
       font-weight: bold;
@@ -57,11 +58,15 @@
     &_height {
       height: 34px;
     }
-    &_width{
+
+    &_width {
       min-width: 87px;
     }
+
     &_no-img {
       background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
     }
+
   }
+  
 }
