--- a/src/components/color-item/color-item.pug
+++ b/src/components/color-item/color-item.pug
@@ -6,10 +6,10 @@ mixin color-item(options={})
       backgroundColor = '',
     } = options;
 
-    const colorClass = `color-item__boxColor_${backgroundColor}`;
+    const colorClass = `color-item__box-color_${backgroundColor}`;
   
   section.color-item 
-    div(class='color-item__boxColor ' + colorClass)  
+    div(class='color-item__box-color ' + colorClass)  
     div.color-item__boxText 
       div.color-item__title=colorName
-      div.color-item__subTitle=colorCode
+      div.color-item__sub-title=colorCode
