--- a/src/components/color-text/color-text.pug
+++ b/src/components/color-text/color-text.pug
@@ -8,4 +8,4 @@ mixin color-text(options = { })
     const sizeClass = `color-text_size-${size}`
   section(class='color-text ' + sizeClass)
     div.color-text__title=title 
-    div.color-text__subTitle!=text 
+    div.color-text__sub-title!=text 
