--- a/src/components/drop-down-bed/drop-down-bed.scss
+++ b/src/components/drop-down-bed/drop-down-bed.scss
@@ -3,23 +3,25 @@
   flex-direction: column;
   text-transform: uppercase;
   width: 266px;
+
   &__titles{
     display: flex;
     justify-content: space-between;
   }
-  &__subTitle {
+
+  &__sub-title {
     color: rgba(31, 32, 65, 0.5);
     font-size: 12px;
   }
+
   &__title {
     font-weight: bold;
     font-size: 12px;
     line-height: 15px;
     margin-bottom: 5px;
   }
-  &__header {
-  }
-  &__titleBtn {
+
+  &__title-btn {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -32,18 +34,22 @@
     width: 100%;
     background: url('./img/arrow-down.svg') no-repeat 232px 6px;
   }
-  &__titleBtn-img {
+
+  &__title-btn-img {
     margin-right: 9px;
   }
+
   &__body {
     padding: 3px 7px 2px 15px;
     border: 1px solid rgba(31, 32, 65, 0.25);
     border-radius: 0px 0px 4px 4px;
     display: none;
   }
+
   &__body_show {
     display: block;
   }
+
   &__bodyItem {
     font-weight: bold;
     font-size: 12px;
@@ -53,14 +59,14 @@
     align-items: center;
     margin-bottom: 7px;
   }
-  &__bodyItem-title {
-  }
+
   &__bodyItem-btns {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 92px;
   }
+
   &__bodyItem-btns-inc {
     width: 30px;
     height: 30px;
@@ -73,11 +79,11 @@
     font-size: 12px;
     line-height: 16px;
   }
+
   &__bodyItem-btns-dec {
     width: 30px;
     height: 30px;
     border-radius: 50%;
-
     color: rgba(31, 32, 65, 0.5);
     border: 1px solid rgba(31, 32, 65, 0.5);
   }
@@ -89,4 +95,5 @@
   &__bodyItem-btns-inc_active {
     border: 1px solid rgba(31, 32, 65, 0.5);
   }
+  
 }
