--- a/src/components/drop-down/drop-down.scss
+++ b/src/components/drop-down/drop-down.scss
@@ -2,15 +2,15 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+
   &__title {
     font-weight: bold;
     font-size: 12px;
     text-transform: uppercase;
     margin-bottom: 0px;
   }
-  &__header {
-  }
-  &__titleBtn {
+
+  &__title-btn {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -20,22 +20,25 @@
     border: 1px solid rgba(31, 32, 65, 0.25);
     color: rgba(31, 32, 65, 0.75);
     border-radius: 4px 4px 0px 0px;
-
     width: 100%;
     background: url(./img/arrow-down.svg) no-repeat 97% 40%;
   }
-  &__titleBtn-img {
+
+  &__title-btn-img {
     margin-right: 9px;
   }
+
   &__body {
     padding: 3px 7px 5px 15px;
     border: 1px solid rgba(31, 32, 65, 0.25);
     border-radius: 0px 0px 4px 4px;
     display: none;
   }
+
   &__body_show {
     display: block;
   }
+
   &__bodyItem {
     text-transform: uppercase;
     font-weight: bold;
@@ -46,14 +49,14 @@
     align-items: center;
     margin-bottom: 8px;
   }
-  &__bodyItem-title {
-  }
+
   &__bodyItem-btns {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 92px;
   }
+
   &__bodyItem-btns-inc {
     width: 30px;
     height: 30px;
@@ -66,14 +69,15 @@
     font-size: 12px;
     line-height: 16px;
   }
+
   &__bodyItem-btns-dec {
     width: 30px;
     height: 30px;
     border-radius: 50%;
-
     color: rgba(31, 32, 65, 0.5);
     border: 1px solid rgba(31, 32, 65, 0.5);
   }
+
   &__bodyItem-btns-control-clean {
     text-transform: uppercase;
     color: #bc9cff;
@@ -81,9 +85,11 @@
     font-size: 13px;
     visibility: hidden;
   }
+  
   &__bodyItem-btns-control-clean_show {
     visibility: visible;
   }
+
   &__bodyItem-btns-control-ok {
     text-transform: uppercase;
     color: #bc9cff;
@@ -91,13 +97,16 @@
     font-size: 12px;
     line-height: 15px;
   }
+
   &__bodyItem-btns-control {
     margin-top: 11px;
     width: 100%;
     display: flex;
     justify-content: space-between;
   }
+
   &__bodyItem-btns-inc_active {
     border: 1px solid rgba(31, 32, 65, 0.5);
   }
+  
 }
