--- a/src/components/head/head.scss
+++ b/src/components/head/head.scss
@@ -1,8 +1,9 @@
-@import '../buttons/buttons.scss';
-.head{
+@import "../buttons/buttons.scss";
+.head {
   max-width: 100%;
   background-color: #fff;
-  &__item{
+
+  &__item {
     display: flex;
     justify-content: flex-end;
     padding: 17px 141px 14px 140px;
@@ -12,24 +13,28 @@
     z-index: 2;
     justify-content: space-between;
   }
-  &__list{
+
+  &__list {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     margin-left: 0px;
   }
-  
-  &__link{
+
+  &__link {
     margin-right: 20px;
-    &:last-child{
+
+    &:last-child {
       margin-right: 0px;
     }
   }
-  &__link_name{
+
+  &__link_name {
     vertical-align: center;
     margin-left: 22px;
-    &::before{
-      content: '';
+
+    &::before {
+      content: "";
       width: 1px;
       height: 30px;
       background: rgba(31, 32, 65, 0.1);
@@ -37,36 +42,39 @@
       margin-left: -20px;
     }
   }
-  &__link_bold{
+
+  &__link_bold {
     font-weight: bold;
     color: black;
   }
-  &__link_downBtn{
+
+  &__link_downBtn {
     width: 21px;
     height: 11px;
-    background: url('./../img/headDown.svg') no-repeat 3px 0px;
+    background: url("./../img/headDown.svg") no-repeat 3px 0px;
     margin-left: 0px;
   }
-}
-@media(max-width:1154px){
-  .head{
-    &__item{
+
+  @media (max-width: 1154px) {
+    &__item {
       padding-right: 30px;
-      background: url('./../img/Logo.svg') no-repeat 30px 15px;
+      background: url("./../img/Logo.svg") no-repeat 30px 15px;
     }
   }
-}
-@media(max-width:962px){
-  .head{
-    &__item{
+
+  @media (max-width: 962px) {
+    &__item {
       padding-left: 30px;
-      background: #fff url('') ;
+      background: #fff url("");
     }
-    &__list{
-      justify-content:center ;
+
+    &__list {
+      justify-content: center;
     }
-    &__link{
+
+    &__link {
       margin-bottom: 10px;
     }
+    
   }
 }
