--- a/src/components/like-button/like-button.scss
+++ b/src/components/like-button/like-button.scss
@@ -10,9 +10,13 @@
     font-size: 10px;
     margin-left: 22px;
   }
+
+  &_action{
+    background: url('./img/favorite.svg')no-repeat 4px 4px;
+    color: #BC9CFF;
+    border-color:#BC9CFF;
+  }  
+
 }
-.like-button_action{
-  background: url('./img/favorite.svg')no-repeat 4px 4px;
-  color: #BC9CFF;
-  border-color:#BC9CFF;
-}
+
+
