--- a/src/components/bullet-list/bullet-list.pug
+++ b/src/components/bullet-list/bullet-list.pug
@@ -9,7 +9,9 @@ mixin bullet-list (options)
       ],
       isRoomDetails = false, 
     } = options;
-    classModifier = isRoomDetails? ' bullet-list__title_room-details':'' 
+
+    const classModifier = isRoomDetails? ' bullet-list__title_room-details':'' 
+  
   section.bullet-list 
     div(class='bullet-list__title'+classModifier)=title
     div.bullet-list__items
