--- a/src/components/radio-buttons/radio-buttons.pug
+++ b/src/components/radio-buttons/radio-buttons.pug
@@ -4,7 +4,7 @@ mixin radio-buttons(options = {})
       title = '',
       list = [
         {text:'Мужчина',isChecked:true},
-        {text:'Женчина',isChecked:false},
+        {text:'Женщина',isChecked:false},
       ]
     }=options
 
