--- a/src/pages/ui-kit/cards/cards.pug
+++ b/src/pages/ui-kit/cards/cards.pug
@@ -33,6 +33,7 @@ html
       div.cards__right-colum
         div.cards__right-colum-item
           div(class="datepicker-here" data-language='en')
+          //datepicker-here тут ошибка, но это инициализация календаря   
         div.cards__right-colum-item
           +slide(
             ['./img/roomDetail/image.png',
