--- a/src/pages/web/room-details/room-details.scss
+++ b/src/pages/web/room-details/room-details.scss
@@ -163,31 +163,31 @@
     margin-right: 9px;
   }
 
-  &__commeentary {
+  &__commentary {
     max-width: 711px;
     margin-bottom: 0px;
   }
 
-  &__commeentary-header {
+  &__commentary-header {
     display: flex;
     justify-content: space-between;
     margin-bottom: 23px;
     align-items: center;
   }
 
-  &__commeentary-title {
+  &__commentary-title {
     font-weight: bold;
     font-size: 19px;
     line-height: 23px;
   }
 
-  &__commeentary-sub-title {
+  &__commentary-sub-title {
     font-size: 14px;
     line-height: 14px;
     color: rgba(31, 32, 65, 0.5);
   }
 
-  &__commeentary-item {
+  &__commentary-item {
     margin-bottom: 22px;
   }
 
