--- a/src/components/slide/slide.scss
+++ b/src/components/slide/slide.scss
@@ -1,7 +1,7 @@
 @import '../rate-btn/rate-btn.scss';
 @import '../price-and-number/price-and-number.scss';
 
-.rev_slide {
+.slick_slide {
   width: 270px;
   background-color: #ffffff;
 
