--- a/src/main.scss
+++ b/src/main.scss
@@ -39,7 +39,7 @@ body {
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
-  font-family: "Montserrat";
+  font-family: Montserrat, Arial, sans-serif;
   font-size: 14px;
 }
 
