#12 #11 add new config and delte import

--- a/src/components/price-room/price-room.scss
+++ b/src/components/price-room/price-room.scss
@@ -1,4 +1,4 @@
-@import '../price-and-number/price-and-number.scss';
+//@import '../price-and-number/price-and-number.scss';
 .price-room {
   border: 1px solid rgba(0, 0, 0, 0.12);
   box-sizing: border-box;
