--- a/src/components/room-search/room-search.scss
+++ b/src/components/room-search/room-search.scss
@@ -1,6 +1,6 @@
-@import '../calendar/calendar.scss';
-@import '../drop-down/drop-down.scss';
-@import '../buttons/buttons.scss';
+//@import '../calendar/calendar.scss';
+//@import '../drop-down/drop-down.scss';
+//@import '../buttons/buttons.scss';
 
 .room-search {
   display: flex;
