--- a/src/components/slide/slide.scss
+++ b/src/components/slide/slide.scss
@@ -1,5 +1,5 @@
-@import '../rate-btn/rate-btn.scss';
-@import '../price-and-number/price-and-number.scss';
+//@import '../rate-btn/rate-btn.scss';
+//@import '../price-and-number/price-and-number.scss';
 
 .slick_slide {
   width: 270px;
