--- a/src/pages/ui-kit/color-and-type/color-and-type.pug
+++ b/src/pages/ui-kit/color-and-type/color-and-type.pug
@@ -13,6 +13,7 @@ html
     link(rel="icon" type="image/png" sizes="16x16" href="./favicons/favicon-16x16.png")
     link(rel="manifest" href="./favicons/site.webmanifest")
     link(rel="mask-icon" href="./favicons/safari-pinned-tab.svg" color="#5bbad5")
+    link(rel="stylesheet" href="./style.css")
     meta(name="msapplication-TileColor" content="#da532c")
     meta(name="theme-color" content="#ffffff")
   body
@@ -31,6 +32,8 @@ html
         +color-text({title : 'H2', text : 'Next one is the item title inside</br> widgets', size : '19'})
         +color-text({title : 'H3', text : 'This is a label or CTA text', size : '12'})
         +color-text({title : 'Body', text : 'This is the body text which is used for most</br> of the design, like paragraphs, lists, etc.'})
+    
+    script(src = "index.js")
 
 
 
