--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -1,7 +1,7 @@
-@import '../../main.scss';
-@import '../../components/head/head.scss';
-@import '../../components/footer/footer.scss';
-@import '../../components/room-search/room-search.scss';
+//@import '../../main.scss';
+//@import '../../components/head/head.scss';
+//@import '../../components/footer/footer.scss';
+//@import '../../components/room-search/room-search.scss';
 
 .background {
   max-width: 1440px;
