--- a/src/pages/ui-kit/form-elements/form-elements.pug
+++ b/src/pages/ui-kit/form-elements/form-elements.pug
@@ -30,6 +30,7 @@ html
     link(rel="icon" type="image/png" sizes="16x16" href="./favicons/favicon-16x16.png")
     link(rel="manifest" href="./favicons/site.webmanifest")
     link(rel="mask-icon" href="./favicons/safari-pinned-tab.svg" color="#5bbad5")
+    link(rel="stylesheet" href="./style.css")
     meta(name="msapplication-TileColor" content="#da532c")
     meta(name="theme-color" content="#ffffff")
   body
@@ -193,3 +194,4 @@ html
           
           div.form-elements__row-footer
             +commentary('Мурад Сарафанов','5 дней назад','Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.','./img/man.png')
+    script(src = "index.js")
