--- a/src/pages/web/search-room/search-room.pug
+++ b/src/pages/web/search-room/search-room.pug
@@ -20,6 +20,7 @@ html
     link(rel="icon" type="image/png" sizes="16x16" href="./favicons/favicon-16x16.png")
     link(rel="manifest" href="./favicons/site.webmanifest")
     link(rel="mask-icon" href="./favicons/safari-pinned-tab.svg" color="#5bbad5")
+    link(rel="stylesheet" href="./style.css")
     meta(name="msapplication-TileColor" content="#da532c")
     meta(name="theme-color" content="#ffffff")
   body
@@ -264,3 +265,5 @@ html
             +pagination()
 
       include ../../../components/footer/footer.pug
+
+      script(src = "index.js")
