fix #6 and fix eslint

--- a/src/pages/web/room-details/room-details.pug
+++ b/src/pages/web/room-details/room-details.pug
@@ -52,11 +52,11 @@ html
                   div.room-details__description-vote-left-vote голосов
                 
                 div.room-details__description-vote-right
-                  ul
-                    li Великолепно
-                    li Хорошо
-                    li Удовлетворительно
-                    li Разочарован
+                  ul.room-details__description-vote-right-list
+                    li.room-details__description-vote-right-list-item Великолепно
+                    li.room-details__description-vote-right-list-item Хорошо
+                    li.room-details__description-vote-right-list-item Удовлетворительно
+                    li.room-details__description-vote-right-list-item Разочарован
 
           div.room-details__commentary
             div.room-details__commentary-header
