--- a/src/components/buttons/buttons.pug
+++ b/src/components/buttons/buttons.pug
@@ -6,7 +6,7 @@ mixin buttons(options = {})
       modifier=[], 
     } = options;
     
-    const classModifier = modifier.map(item=>' btn__link_'+item);
+    const classModifier = modifier.map(item=>` btn__link_${item}`);
 
   section.btn
     a(class=['btn__link'].concat(classModifier) href=href)=text 
