--- a/src/components/drop-down-bed/drop-down-bed.scss
+++ b/src/components/drop-down-bed/drop-down-bed.scss
@@ -39,7 +39,7 @@
     margin-right: 9px;
   }
 
-  &__body {
+  &__items {
     padding: 3px 7px 2px 15px;
     border: 1px solid rgba(31, 32, 65, 0.25);
     border-radius: 0px 0px 4px 4px;
@@ -50,7 +50,7 @@
     display: block;
   }
 
-  &__bodyItem {
+  &__item {
     font-weight: bold;
     font-size: 12px;
     line-height: 16px;
@@ -60,14 +60,14 @@
     margin-bottom: 7px;
   }
 
-  &__bodyItem-btns {
+  &__item-buttons {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 92px;
   }
 
-  &__bodyItem-btns-inc {
+  &__item-buttons-inc {
     width: 30px;
     height: 30px;
     border-radius: 50%;
@@ -75,12 +75,12 @@
     border: 1px solid rgba(31, 32, 65, 0.25);
   }
 
-  &__bodyItem-btns-count {
+  &__item-buttons-count {
     font-size: 12px;
     line-height: 16px;
   }
 
-  &__bodyItem-btns-dec {
+  &__item-buttons-dec {
     width: 30px;
     height: 30px;
     border-radius: 50%;
@@ -88,11 +88,11 @@
     border: 1px solid rgba(31, 32, 65, 0.5);
   }
 
-  &__bodyItem-btns-control-clean_show {
+  &__item-buttons-control-clean_show {
     visibility: visible;
   }
 
-  &__bodyItem-btns-inc_active {
+  &__item-buttons-inc_active {
     border: 1px solid rgba(31, 32, 65, 0.5);
   }
   
