--- a/src/components/drop-down/drop-down.pug
+++ b/src/components/drop-down/drop-down.pug
@@ -9,23 +9,24 @@ mixin drop-down(options={})
         "младенцы",
       ], 
     } = options;
-    const classOpen = isOpen ? 'drop-down__body_show' : ''
+    
+    const classModifier = isOpen ? 'drop-down__items_show' : ''
 
   section.drop-down.js-drop-down
     div.drop-down__title=title 
     div.drop-down__header
       button.drop-down__title-btn.js-drop-down__title-btn Сколько гостей
 
-    div(class='drop-down__body  js-drop-down__body ' + classOpen)
+    div(class=`drop-down__items  js-drop-down__items ${classModifier}`)
       -for(let item of list )
-        div.drop-down__bodyItem
-          div.drop-down__bodyItem-title=item
-          div.drop-down__bodyItem-btns 
-            button.drop-down__bodyItem-btns-inc.js-drop-down__bodyItem-btns-inc#inc -
-            div.drop-down__bodyItem-btns-count.js-drop-down__bodyItem-btns-count 0
-            button.drop-down__bodyItem-btns-dec#dec +
+        div.drop-down__item
+          div.drop-down__item-title=item
+          div.drop-down__item-buttons 
+            button.drop-down__item-buttons-inc.js-drop-down__item-buttons-inc#inc -
+            div.drop-down__item-buttons-count.js-drop-down__item-buttons-count 0
+            button.drop-down__item-buttons-dec#dec +
             
-      div.drop-down__bodyItem
-        div.drop-down__bodyItem-btns-control 
-            button.drop-down__bodyItem-btns-control-clean.js-drop-down__bodyItem-btns-control-clean очистить
-            button.drop-down__bodyItem-btns-control-ok.js-drop-down__bodyItem-btns-control-ok применить
+      div.drop-down__item
+        div.drop-down__item-buttons-control 
+            button.drop-down__item-buttons-control-clean.js-drop-down__item-buttons-control-clean очистить
+            button.drop-down__item-buttons-control-ok.js-drop-down__item-buttons-control-ok применить
