--- a/src/components/drop-down/drop-down.scss
+++ b/src/components/drop-down/drop-down.scss
@@ -28,18 +28,18 @@
     margin-right: 9px;
   }
 
-  &__body {
+  &__items {
     padding: 3px 7px 5px 15px;
     border: 1px solid rgba(31, 32, 65, 0.25);
     border-radius: 0px 0px 4px 4px;
     display: none;
   }
 
-  &__body_show {
+  &__items_show {
     display: block;
   }
 
-  &__bodyItem {
+  &__item {
     text-transform: uppercase;
     font-weight: bold;
     font-size: 12px;
@@ -50,14 +50,14 @@
     margin-bottom: 8px;
   }
 
-  &__bodyItem-btns {
+  &__item-buttons {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 92px;
   }
 
-  &__bodyItem-btns-inc {
+  &__item-buttons-inc {
     width: 30px;
     height: 30px;
     border-radius: 50%;
@@ -65,12 +65,12 @@
     border: 1px solid rgba(31, 32, 65, 0.25);
   }
 
-  &__bodyItem-btns-count {
+  &__item-buttons-count {
     font-size: 12px;
     line-height: 16px;
   }
 
-  &__bodyItem-btns-dec {
+  &__item-buttons-dec {
     width: 30px;
     height: 30px;
     border-radius: 50%;
@@ -78,7 +78,7 @@
     border: 1px solid rgba(31, 32, 65, 0.5);
   }
 
-  &__bodyItem-btns-control-clean {
+  &__item-buttons-control-clean {
     text-transform: uppercase;
     color: #bc9cff;
     font-weight: bold;
@@ -86,11 +86,11 @@
     visibility: hidden;
   }
   
-  &__bodyItem-btns-control-clean_show {
+  &__item-buttons-control-clean_show {
     visibility: visible;
   }
 
-  &__bodyItem-btns-control-ok {
+  &__item-buttons-control-ok {
     text-transform: uppercase;
     color: #bc9cff;
     font-weight: bold;
@@ -98,14 +98,14 @@
     line-height: 15px;
   }
 
-  &__bodyItem-btns-control {
+  &__item-buttons-control {
     margin-top: 11px;
     width: 100%;
     display: flex;
     justify-content: space-between;
   }
 
-  &__bodyItem-btns-inc_active {
+  &__item-buttons-inc_active {
     border: 1px solid rgba(31, 32, 65, 0.5);
   }
   
