--- a/src/pages/ui-kit/form-elements/form-elements.pug
+++ b/src/pages/ui-kit/form-elements/form-elements.pug
@@ -86,8 +86,8 @@ html
           div.form-elements__row-input-item
             +checkbox-list({
               title:'expandable checkbox list',
-              show:'checkbox-list__items_show',
-              rotate:'checkbox-list__title-btn_rotate',
+              show:true,
+              rotate:true,
               items : [
                 {text:'Завтрак',flag:false},
                 {text:'Письменный стол',flag:false},
