--- a/src/components/bullet-list/bullet-list.pug
+++ b/src/components/bullet-list/bullet-list.pug
@@ -10,10 +10,10 @@ mixin bullet-list (options)
       isRoomDetails = false, 
     } = options;
 
-    const classModifier = isRoomDetails? ' bullet-list__title_room-details':'' 
+    const classModifier = isRoomDetails? 'bullet-list__title_room-details':'' 
   
   section.bullet-list 
-    div(class='bullet-list__title'+classModifier)=title
+    div(class=`bullet-list__title ${classModifier}`)=title
     div.bullet-list__items
       -for(let item of list)
         div.bullet-list__item!=item
