--- a/src/components/checkbox-list/checkbox-list.pug
+++ b/src/components/checkbox-list/checkbox-list.pug
@@ -15,10 +15,12 @@ mixin checkbox-list(options={})
       ]
     } = options;
 
+    const classModifier = rotate? 'checkbox-list__title-btn_rotate':'' 
+
   if(isList)
     section.checkbox-list.js-checkbox-list
-      button(class='checkbox-list__title-btn js-checkbox-list__title-btn '+ rotate )=title
-      ul(class='checkbox-list__items js-checkbox-list__items '+ show)
+      button(class=`checkbox-list__title-btn js-checkbox-list__title-btn ${classModifier}`)=title
+      ul(class=`checkbox-list__items js-checkbox-list__items ${show && 'checkbox-list__items_show'}`)
         -for(let {text,flag} of items)
           li.checkbox-list__item
             label(class='checkbox-list__item-check')
