--- a/src/components/like-button/like-button.pug
+++ b/src/components/like-button/like-button.pug
@@ -5,7 +5,7 @@ mixin like-button(options)
       isClick = false,
     } = options;
     
-    const classClick = isClick ? 'like-button_action' : ''
+    const classModification = isClick ? 'like-button_action' : ''
 
-  section(class='like-button js-like-button ' + classClick)
+  section(class=`like-button js-like-button ${classModification}`)
     div.like-button__count.js-like-button__count=likeCount
