--- a/src/components/buttons/buttons.scss
+++ b/src/components/buttons/buttons.scss
@@ -55,15 +55,15 @@
       padding: 0px 20px;
     }
 
-    &_height {
+    &_height-34 {
       height: 34px;
     }
 
-    &_width {
+    &_min-width-87 {
       min-width: 87px;
     }
 
-    &_no-img {
+    &_delete-img {
       background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
     }
 
