--- a/src/components/head/head.pug
+++ b/src/components/head/head.pug
@@ -31,13 +31,13 @@ mixin head(options = {})
         else
           li.head__link
             +buttons({
-              modifier:['border','height','width'],
+              modifier:['border','height-34','min-width-87'],
               text:'войти',
               href:'sign-in.html'
             })
           li.head__link
             +buttons({
-              modifier:['form','height','no-img'],
+              modifier:['form','height-34','delete-img'],
               text:'зарегистрироваться',
               href:'registration.html',
             }) 
