fix add folder images  #12

--- a/src/components/calendar/datepicker.scss
+++ b/src/components/calendar/datepicker.scss
@@ -267,7 +267,7 @@
         font-size: 1.5rem;
         line-height: 1.5rem;
         border: 0rem solid transparent;
-        background: #fff url(/img/arrow-back.svg) no-repeat 0px 0px ;
+        background: #fff url(/images/arrow-back.svg) no-repeat 0px 0px ;
 
       }
 
@@ -280,7 +280,7 @@
         font-size: 1.5rem;
         line-height: 1.5rem;
         border: 0rem solid transparent;
-        background: #fff url(/img/arrow-forward.svg) no-repeat 0px 0px ;
+        background: #fff url(./img/arrow-forward.svg) no-repeat 0px 0px ;
       }
     }
   }
