--- a/src/components/rate-btn/rate-btn.scss
+++ b/src/components/rate-btn/rate-btn.scss
@@ -24,7 +24,7 @@
       width: 1.5rem;
       height: 1.5rem;
       position: absolute;
-      background: url("./img/star_border.svg") no-repeat 1px 1px;
+      background: url("./images/star_border.svg") no-repeat 1px 1px;
 
       font-family: Material Icons;
       font-size: 1.5rem;
@@ -36,7 +36,7 @@
       width: 1.5rem;
       height: 1.5rem;
       position: absolute;
-      background: url("./img/star.svg") no-repeat 1px 1px;
+      background: url("./images/star.svg") no-repeat 1px 1px;
       font-family: Material Icons;
       font-size: 1.5rem;
       line-height: 1.25rem;
