--- a/src/components/slide/slide.pug
+++ b/src/components/slide/slide.pug
@@ -4,7 +4,7 @@ include ../rate-btn/rate-btn.pug
 mixin slide(options = {})
   -
     const {
-      img = ['./img/roomDetail/image.png',
+      img = ['./img/left-big.png',
         './img/photo/image-2.png',
         './img/photo/image-3.png',
         './img/photo/image-4.png'],
