--- a/src/components/text-list/text-list.scss
+++ b/src/components/text-list/text-list.scss
@@ -21,16 +21,16 @@
   }
 
   &_smile {
-    background: url('./img/insert_emoticon.svg')no-repeat 4px 0px;
+    background: url('./images/insert_emoticon.svg')no-repeat 4px 0px;
   }
   
   &_city {
-    background: url('./img/location_city.svg')no-repeat 4px 0px;
+    background: url('./images/location_city.svg')no-repeat 4px 0px;
     margin-top: 23px;
   }
   
   &_comfort {
-    background: url('./img/whatshot.svg')no-repeat 4px 0px;
+    background: url('./images/whatshot.svg')no-repeat 4px 0px;
     margin-top: 23px;
   }
 
