--- a/src/pages/ui-kit/cards/cards.pug
+++ b/src/pages/ui-kit/cards/cards.pug
@@ -37,7 +37,7 @@ html
           //datepicker-here тут ошибка, но это инициализация календаря   
         div.cards__right-colum-item
           +slide(
-            ['./img/roomDetail/image.png',
+            ['./img/left-big.png',
             './img/photo/image-2.png',
             './img/photo/image-3.png',
             './img/photo/image-4.png'],
