--- a/src/pages/web/room-details/room-details.pug
+++ b/src/pages/web/room-details/room-details.pug
@@ -25,10 +25,10 @@ html
     div.room-details
       div.room-details__imgs
         div.room-details__img-left
-          img(src="./img/roomDetail/image.png" alt="")
+          img(src="./img/left-big.png" alt="")
         div.room-details__img-right
-          img(src="./img/roomDetail/image2.png" alt="")
-          img(src="./img/roomDetail/image3.png" alt="")
+          img(src="./images/right-top.png" alt="")
+          img(src="./images/right-bottom.png" alt="")
       
       div.room-details__description
         div.room-details__description-left
