--- a/src/pages/web/search-room/search-room.pug
+++ b/src/pages/web/search-room/search-room.pug
@@ -77,7 +77,7 @@ html
           div.search-room__row-right-items
             div.search-room__row-right-item              
               +slide({
-                img : ['./img/roomDetail/image.png',
+                img : ['./img/left-big.png',
                 './img/photo/image-2.png',
                 './img/photo/image-3.png',
                 './img/photo/image-4.png'],
@@ -124,7 +124,7 @@ html
               +slide({
                 img :['./img/photo/image-11.png',
                 './img/photo/image-12.png',
-                './img/roomDetail/image.png',
+                './img/left-big.png',
                 './img/photo/image-2.png'],
                 number :'856',
                 pay : '7 300₽',
@@ -170,7 +170,7 @@ html
               +slide({
                 img : ['./img/photo/image-11.png',
                 './img/photo/image-12.png',
-                './img/roomDetail/image.png',
+                './img/left-big.png',
                 './img/photo/image-2.png'],
                 number :'672',
                 pay : '5 500₽',
