--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -1,15 +1,10 @@
-//@import '../../main.scss';
-//@import '../../components/head/head.scss';
-//@import '../../components/footer/footer.scss';
-//@import '../../components/room-search/room-search.scss';
-
 .background {
   max-width: 1440px;
   height: 830px;
   margin: 0px auto;
   padding: 70px 151px 20px 140px;
   position: relative;
-  background: url('./../img/index.png')0px -71px no-repeat;
+  background: url('./images/index.png')0px -71px no-repeat;
 
   &__text{
     color: rgba(31, 32, 65, 0.75);
