--- a/src/components/account-registration/account-registration.scss
+++ b/src/components/account-registration/account-registration.scss
@@ -1,5 +1,5 @@
 .account-registration {
-  max-width: 380px;
+  width: 380px;
   background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.12);
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
@@ -14,26 +14,22 @@
   }
 
   &__item {
-    margin-bottom: 10px;
-
-    &:nth-child(3) {
-      margin-bottom: -3px;
-    }
+    margin-bottom: 6px;
 
     &:nth-child(4) {
       margin-bottom: 21px;
     }
 
     &:nth-child(5) {
-      margin-bottom: 18px;
+      margin-bottom: 20px;
     }
-
-    &:nth-child(7) {
-      margin-bottom: -3px;
+    
+    &:nth-child(6) {
+      margin-bottom: 9px;
     }
 
     &:nth-child(8) {
-      margin-bottom: 24px;
+      margin-bottom: 21px;
     }
     
   }
