--- a/src/components/bullet-list/bullet-list.scss
+++ b/src/components/bullet-list/bullet-list.scss
@@ -5,6 +5,7 @@
     font-weight: bold;
     margin-left: 1px;
     margin-bottom: 14px;
+    text-transform: uppercase;
   }
 
   &__title_room-details {
@@ -17,7 +18,7 @@
 
   &__item {
     font-size: 14px;
-    margin-left: 21px;
+    padding-left: 21px;
     color: rgba(31, 32, 65, 0.75);
     position: relative;
     margin-bottom: 13px;
@@ -26,10 +27,10 @@
       content: "";
       width: 10px;
       height: 10px;
-      margin-left: -21px;
       background: rgba(31, 32, 65, 0.25);
       position: absolute;
       border-radius: 50%;
+      left: 0px;
       top: 4px;
     }
     
