--- a/src/components/head/head.scss
+++ b/src/components/head/head.scss
@@ -31,15 +31,15 @@
 
   &__link_name {
     vertical-align: center;
-    margin-left: 22px;
-
+    padding-left: 22px;
+    position: relative;
     &::before {
       content: "";
       width: 1px;
       height: 30px;
       background: rgba(31, 32, 65, 0.1);
       position: absolute;
-      margin-left: -20px;
+      left: 0px;
     }
   }
 
