--- a/src/components/radio-buttons/radio-buttons.scss
+++ b/src/components/radio-buttons/radio-buttons.scss
@@ -16,16 +16,15 @@
     height: 1px;
     overflow: hidden;
     clip: rect(0 0 0 0);
-    margin-left: 30px;
   }
-
+  
   &__radio-name {
     margin-right: 20px;
     color: rgba(31, 32, 65, 0.5);
     position: relative;
+    padding-left: 30px;
 
     &::before {
-      margin-left: -30px;
       content: "";
       width: 20px;
       height: 20px;
@@ -33,10 +32,11 @@
       border: 1px solid rgba(31, 32, 65, 0.25);
       border-radius: 10px;
       position: absolute;
+      left: 0px;
     }
-
+    
     &::after {
-      margin-left: -30px;
+      
       content: "";
       width: 12px;
       height: 12px;
@@ -44,6 +44,7 @@
       background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
       border-radius: 10px;
       position: absolute;
+      left: 0px;
       top: 4px;
       left: 4px;
       opacity: 0;
