--- a/src/components/rich-checkbox-btn/rich-checkbox-btn.scss
+++ b/src/components/rich-checkbox-btn/rich-checkbox-btn.scss
@@ -14,6 +14,7 @@
     text-transform: none;
     font-size: 14px;
     margin-bottom: 5px;
+    position: relative;
   }
 
   &__checkbox {
@@ -21,31 +22,32 @@
     height: 1px;
     overflow: hidden;
     clip: rect(0 0 0 0);
-    margin-left: 30px;
-
+    padding-left: 30px;
+    
     &::before {
       content: "";
       width: 20px;
       height: 20px;
       border: 1px solid rgba(31, 32, 65, 0.25);
-      margin-left: -30px;
-      margin-top: -15px;
       border-radius: 4px;
       position: absolute;
+      left: 0;
+      top: 0;
     }
-
+    
     &:checked {
-
+      
       &::before {
         background: url("./img/Vector.svg") no-repeat 50%;
         border-color: #bc9cff;
       }
-
+      
     }
-
+    
   }
   
   &__sub-title {
+    padding-left: 30px;
     position: relative;
     font-size: 14px;
   }
