--- a/src/components/toggle/toggle.scss
+++ b/src/components/toggle/toggle.scss
@@ -2,12 +2,13 @@
   font-weight: bold;
   text-transform: uppercase;
   font-size: 12px;
+  position: relative;
 
   &__label {
     display: flex;
     margin-top: 12px;
   }
-  
+
   &__checkbox {
     width: 1px;
     height: 1px;
@@ -17,25 +18,24 @@
 
     &::before {
       content: "";
-      width: 39px;
+      width: 40px;
       height: 20px;
-      margin-left: -50px;
       border: 1px solid rgba(31, 32, 65, 0.25);
       border-radius: 10px;
       position: absolute;
+      left: 0;
     }
 
     &::after {
       content: "";
       width: 12px;
       height: 12px;
-      margin-left: -45px;
-      margin-top: 3px;
+      margin-top: 4px;
       background: rgba(31, 32, 65, 0.25);
       border-radius: 10px;
       position: absolute;
+      left: 5px;
     }
-
   }
 
   &__text {
@@ -46,16 +46,13 @@
   }
 
   &__checkbox:checked {
-
-    &::before{
-      border: 1px solid #BC9CFF;
+    &::before {
+      border: 1px solid #bc9cff;
     }
 
-    &::after{
-      background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
-      margin-left: -26px;
+    &::after {
+      background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+      left: 25px;
     }
-
   }
-  
 }
