--- a/src/pages/web/room-details/room-details.pug
+++ b/src/pages/web/room-details/room-details.pug
@@ -23,12 +23,12 @@ html
     +head()
     
     div.room-details
-      div.room-details__imgs
-        div.room-details__img-left
+      div.room-details__images
+        div.room-details__images-left
           img(src="./img/left-big.png" alt="")
-        div.room-details__img-right
-          img(src="./images/right-top.png" alt="")
-          img(src="./images/right-bottom.png" alt="")
+        div.room-details__images-right
+          img(src="./images/right-top.png" alt="" class='room-details__images-right-top')
+          img(src="./images/right-bottom.png" alt="" class='room-details__images-right-bottom')
       
       div.room-details__description
         div.room-details__description-left
