--- a/src/fonts/fonts.scss
+++ b/src/fonts/fonts.scss
@@ -52,8 +52,8 @@
 }
 @font-face {
   font-family: "Quicksand";
-  src: url("../fonts/quicksand/quicksandbold.woff") format("woff"),
-    url("../fonts/quicksand/quicksandbold.ttf") format("truetype");
+  src:url("../fonts/quicksand/quicksandbold.woff2") format("woff2"),
+   url("../fonts/quicksand/quicksandbold.woff") format("woff");
   font-style: normal;
 }
 @font-face {
