fix images name #12

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -36,7 +36,7 @@
     font-size: 14px;
     line-height: 24px;
     padding-top: 57px;
-    background: url("./img/Logo.svg") no-repeat 0px 0px;
+    background: url("./img/logo.svg") no-repeat 0px 0px;
     max-width: 260px;
     margin-right: 40px;
   }
