--- a/src/components/head/head.scss
+++ b/src/components/head/head.scss
@@ -58,7 +58,7 @@
   @media (max-width: 1154px) {
     &__item {
       padding-right: 30px;
-      background: url("./../img/Logo.svg") no-repeat 30px 15px;
+      background: url("./../img/logo.svg") no-repeat 30px 15px;
     }
   }
 
